# googlecodejam2016-hs

./: .codeclimate.yml  .travis.yml  LICENSE  README.md  googlecodejam2016-hs.cabal  q1a-a-large.sh  q1a-a-small.sh  q1a-b-large.sh  q1a-b-small.sh  stack.yaml
q1a/: C.hs
src/2010africa/: A.hs  B.hs  C.hs
src/q1a/: A.hs  B.hs
src/q1b/: A.hs  B.hs  C.hs
src/q1c/: A.hs  B.hs  C.hs
test/: Spec.hs
test/2010africa/: ASpec.hs  BSpec.hs  CSpec.hs
test/q1a/: CSpec.hs
