name:                googlecodejam2016-hs
version:             0.1.0.0
synopsis:            try and error Google Code Jam 2016
description:         Please see README.md
homepage:            https://github.com/yuto-matsum/googlecodejam2016-hs#readme
license:             BSD3
license-file:        LICENSE
author:              yuto-matsum
maintainer:          yuto-matsum
copyright:           2016 yuto-matsum
category:            Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable q1a-a
  hs-source-dirs:      src/q1a
  main-is:             A.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable q1a-b
  hs-source-dirs:      src/q1a
  main-is:             B.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable q1a-c
  hs-source-dirs:      src/q1a
  main-is:             C.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable 2010africa-a
  hs-source-dirs:      src/2010africa
  main-is:             A.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable 2010africa-b
  hs-source-dirs:      src/2010africa
  main-is:             B.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable 2010africa-c
  hs-source-dirs:      src/2010africa
  main-is:             C.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , doctest
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite q1a-c-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/q1a
  main-is:             CSpec.hs
  build-depends:       base
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite 2010africa-a-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/2010africa
  main-is:             ASpec.hs
  build-depends:       base
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite 2010africa-b-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/2010africa
  main-is:             BSpec.hs
  build-depends:       base
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite 2010africa-c-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/2010africa
  main-is:             CSpec.hs
  build-depends:       base
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yuto-matsum/googlecodejam2016-hs
